@@ -43,7 +43,7 @@ from guard import Skip, Timeout
 from alternation import choice, Alternation
 from channel import ChannelPoisonException, ChannelRetireException
 from channelend import retire, poison, IN, OUT
-from process import Process, process, Sequence, Parallel, Spawn
+from process import Process, process, Sequence, Parallel, Spawn, current_process_id
 
 
 # Buffered channel will fallback to the default Channel, if not buffered.
