@@ -25,6 +25,7 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 # Imports
 import multiprocessing as mp
+import time, random
 import types
 import cPickle as pickle
 import sys
@@ -72,9 +73,13 @@ class Process(mp.Process):
     """
     def __init__(self, fn, *args, **kwargs):
         mp.Process.__init__(self)
+        
         self.fn = fn
         self.args = args
         self.kwargs = kwargs
+
+        # Create unique id
+        self.id = str(random.random())+str(time.time())
 
         # This reference is created to pass the ShmManager by inheritance.
         # It is required for PyCSP.processes to work in win32, since processes are not forked
@@ -96,29 +101,36 @@ class Process(mp.Process):
             self.__check_retire(self.args)
             self.__check_retire(self.kwargs.values())
 
+
     def __check_poison(self, args):
         for arg in args:
-            if isinstance(arg, ChannelEndRead) or isinstance(arg, ChannelEndWrite) or isinstance(arg, Channel):
-                arg.poison()
-            elif types.ListType == type(arg):
-                self.__check_poison(arg)
-            elif types.DictType == type(arg):
-                self.__check_poison(arg.keys())
-                self.__check_poison(arg.values())
+            try:
+                if types.ListType == type(arg) or types.TupleType == type(arg):
+                    self.__check_poison(arg)
+                elif types.DictType == type(arg):
+                    self.__check_poison(arg.keys())
+                    self.__check_poison(arg.values())
+                elif type(arg.poison) == types.UnboundMethodType:
+                    arg.poison()
+            except AttributeError:
+                pass
 
     def __check_retire(self, args):
         for arg in args:
-            if isinstance(arg, ChannelEndRead) or isinstance(arg, ChannelEndWrite):
-                # Ignore if try to retire an already retired channel end.
-                try:
-                    arg.retire()
-                except ChannelRetireException:
-                    pass
-            elif types.ListType == type(arg):
-                self.__check_retire(arg)
-            elif types.DictType == type(arg):
-                self.__check_retire(arg.keys())
-                self.__check_retire(arg.values())
+            try:
+                if types.ListType == type(arg) or types.TupleType == type(arg):
+                    self.__check_retire(arg)
+                elif types.DictType == type(arg):
+                    self.__check_retire(arg.keys())
+                    self.__check_retire(arg.values())
+                elif type(arg.retire) == types.UnboundMethodType:
+                    # Ignore if try to retire an already retired channel end.
+                    try:
+                        arg.retire()
+                    except ChannelRetireException:
+                        pass
+            except AttributeError:
+                pass
 
     # syntactic sugar:  Process() * 2 == [Process<1>,Process<2>]
     def __mul__(self, multiplier):
@@ -256,6 +268,11 @@ def Sequence(*plist):
         # Call Run directly instead of start() and join() 
         p.run()
 
+def current_process_id():
+    p = mp.current_process()
+    if p.name == 'MainProcess':
+        return 'main'
+    return p.id
 
 # Run tests
 if __name__ == '__main__':
